--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
        
     </ul>
     <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js" async></script>
-    <script src="js/gallery.js" type="module"></script>
+    <script src="./js/gallery.js" type="module"></script>
 </body>
 </html>
